user salt changes
Former-commit-id: e4b707d9aadb83cef540d4f35fb009be2e0be434
Former-commit-id: 46c98d077de33d3d7b143dda6c38750976583c6f